[package]
name = "avsg"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7"
anyhow = "1.0"
block-modes = "0.8"
serde-xml-rs = "0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]
