[package]
name = "avsg"
version = "0.1.0"
description = "Axiom Verge Save Game Viewer"
license = "MIT"
edition = "2018"
resolver = "2"
readme = "README.md"
include = ["src/**/*", "LICENSE-MIT", "README.md"]

[dependencies]
aes = "0.7"
anyhow = "1.0"
block-modes = "0.8"
clap = "2.33"
humantime = "2.1"
serde-xml-rs = "0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]
