[package]
name = "avsg"
version = "0.1.0"
description = "Axiom Verge Save Game Viewer"
license = "MIT"
edition = "2018"
resolver = "2"
readme = "README.md"
include = ["src/**/*", "LICENSE-MIT", "README.md"]

[dependencies]
aes = "0.8"
anyhow = "1.0"
clap = "2.33"
humantime = "2.1"
serde-xml-rs = "0.5"

[dependencies.cbc]
version = "0.1"
features = [
    "std",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]
